# ToDoListAPI

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3a0e149e1ab6_.py  66de33263a27_.py  870977c4985d_.py
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
scripts/: setup.sh
tests/: test_task.py
